# cmo_digits

./: .gitignore  README.md  play.py  pyproject.toml  train.py
cmo_digits/: activation.py  initializers.py  network.py  utils.py
cmo_digits/activation/: interface.py  leaky_relu.py  relu.py  sigmoid.py  tanh.py
